--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+content
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -65,7 +67,8 @@ docs/_build/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
